--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
+branches:
+  only:
+  - assignment3
+env:
+  - DB=mysql
+  - test=unit
 language: java
 jdk:
   - oraclejdk8
@@ -7,3 +13,4 @@ install: true
 
 script:
   - ./gradlew war
+
