--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ test {
             }
         }*/
 
-/*sourceSets{
+sourceSets{
 
     test{
         java{
@@ -61,7 +61,7 @@ test {
 
         }
     }
-}*/
+}
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-actuator')
@@ -93,7 +93,7 @@ dependencies {
     testCompile('io.rest-assured:rest-assured:3.0.3')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.springframework.security:spring-security-test')
-    //testCompile("junit:junit:4.11")
+    testCompile("junit:junit:4.11")
 }
 
 war {
