--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ test {
 sourceSets{
     main{
           java{
-            srcDirs = ["com.csye6255.demo/DemoApplication"]
+            srcDirs = ["src"]
         }
        }
     test{
