--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,12 @@ test {
         events "passed", "skipped", "failed", "standardOut", "standardError"
     }
 }
-
+test {
+    reports {
+        junitXml.enabled = false
+        html.enabled = true
+    }               
+}
 /*sourceSets{
     test{
         java{
