--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,9 @@ gen
 .gitignore
 .idea/inspectionProfiles/
 build/reports/
-build/tmp/compileJava/
-build/tmp/compileTestJava/
-com.csye6255.demo/
-java/
-out/test/classes/com/csye6225/demo/rest_assured/Demo.class
+# build/tmp/compileJava/
+# build/tmp/compileTestJava/
+# com.csye6255.demo/
+# java/
+# out/test/classes/com/csye6225/demo/rest_assured/Demo.class
 src/test/resources/
