--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,11 @@ install: true
 script:
   - ./gradlew war
   - ./gradlew test --info 
+  
+  notifications:
+  email:
+    recipients:
+      - jain.yo@husky.neu.edu
+      - magare.r@husky.neu.edu
+      - shetty.pr@husky.neu.edu
+      - gupta.rite@husky.neu.edu
