--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.thymeleaf.cache=false
 security.user.name=admin
 security.user.password=admin
 spring.session.store-type=none
-catalina.base=/home/yogita/Downloads/tomcat/apache-tomcat-8.5.20
+#catalina.base=/home/yogita/Downloads/tomcat/apache-tomcat-8.5.20
+catalina.base=/home/travis/
 logging.file=${catalina.base}/logs/csye6225.log
 ##spring.mvc.view.prefix: /WEB-INF/jsp/
 ##spring.mvc.view.suffix: .jsp
