--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,17 @@ branches:
 language: java
 jdk:
   - oraclejdk8
-
+services:
+  - mysql
+  
+test:
+  adapter: mysql2
+  database: user_database
+  username: travis
+  encoding: utf8
+  
+before_install:
+  - mysql -e 'CREATE DATABASE IF NOT EXISTS user_database;'
 env:
   CATALINA_BASE=/home/travis
 
