--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,15 +12,27 @@ logging.file=${catalina.base}/logs/csye6225.log
 ##spring.mvc.view.prefix: /WEB-INF/jsp/
 ##spring.mvc.view.suffix: .jsp
 ################## DataSource Configuration ##########################
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/user_database
-spring.datasource.username=yogita
-spring.datasource.password=yogita
+##spring.datasource.driverClassName=com.mysql.jdbc.Driver
+##spring.datasource.url=jdbc:mysql://localhost:3306/user_database
+##spring.datasource.username=yogita
+##spring.datasource.password=yogita
 ################### Hibernate Configuration ##########################
-spring.jpa.database=MYSQL
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+##spring.jpa.database=MYSQL
+##spring.jpa.show-sql=true
+##spring.jpa.hibernate.ddl-auto=update
+##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 # Naming strategy
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+#spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+
+# IN MEMORY DB CONFIG
+# H2
+spring.h2.console.enabled=false
+spring.h2.console.path=/h2
+
+# JDBC Datasource for H2 In-memory database
+spring.datasource.url=jdbc:h2:file:/tmp/csye6225
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
 
