--- a/build.gradle
+++ b/build.gradle
@@ -92,8 +92,8 @@ dependencies {
     //compile ('com.google.cloud:google-cloud:+')
 
     runtime('org.springframework.boot:spring-boot-devtools')
-    runtime('mysql:mysql-connector-java')
-
+    //runtime('mysql:mysql-connector-java')
+    compile('com.h2database:h2:+')
     providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 
     testCompile('io.rest-assured:rest-assured:3.0.3')
