--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,15 @@ logging.file=${catalina.base}/logs/csye6225.log
 # Naming strategy
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
+# IN MEMORY DB CONFIG
+# H2
+spring.h2.console.enabled=false
+spring.h2.console.path=/h2
+
+# JDBC Datasource for H2 In-memory database
+spring.datasource.url=jdbc:h2:file:/tmp/csye6225
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+# Hibernate
+spring.jpa.hibernate.ddl-auto=update
