--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-spring.main.banner-mode=off
-management.security.enabled=false
-security.basic.enabled=false
-spring.thymeleaf.mode=LEGACYHTML5
-spring.thymeleaf.cache=false
-security.user.name=admin
-security.user.password=admin
-spring.session.store-type=none
+#spring.main.banner-mode=off
+#management.security.enabled=false
+#security.basic.enabled=false
+#spring.thymeleaf.mode=LEGACYHTML5
+#spring.thymeleaf.cache=false
+#security.user.name=admin
+#security.user.password=admin
+#spring.session.store-type=none
 #catalina.base=/home/yogita/Downloads/tomcat/apache-tomcat-8.5.20
-catalina.base=/home/travis/
-logging.file=${catalina.base}/logs/csye6225.log
+#catalina.base=/home/travis/
+#logging.file=${catalina.base}/logs/csye6225.log
 ##spring.mvc.view.prefix: /WEB-INF/jsp/
 ##spring.mvc.view.suffix: .jsp
 ################## DataSource Configuration ##########################
@@ -22,17 +22,4 @@ logging.file=${catalina.base}/logs/csye6225.log
 ##spring.jpa.hibernate.ddl-auto=update
 ##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 # Naming strategy
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
-
-# IN MEMORY DB CONFIG
-# H2
-spring.h2.console.enabled=false
-spring.h2.console.path=/h2
-
-# JDBC Datasource for H2 In-memory database
-spring.datasource.url=jdbc:h2:file:/tmp/csye6225
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-# Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active: dev
