--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-#spring.main.banner-mode=off
-#management.security.enabled=false
-#security.basic.enabled=false
-#spring.thymeleaf.mode=LEGACYHTML5
-#spring.thymeleaf.cache=false
-#security.user.name=admin
-#security.user.password=admin
-#spring.session.store-type=none
+spring.main.banner-mode=off
+management.security.enabled=false
+security.basic.enabled=false
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.cache=false
+security.user.name=admin
+security.user.password=admin
+spring.session.store-type=none
 #catalina.base=/home/yogita/Downloads/tomcat/apache-tomcat-8.5.20
-#catalina.base=/home/travis/
-#logging.file=${catalina.base}/logs/csye6225.log
+catalina.base=/home/travis/
+logging.file=${catalina.base}/logs/csye6225.log
 ##spring.mvc.view.prefix: /WEB-INF/jsp/
 ##spring.mvc.view.suffix: .jsp
 ################## DataSource Configuration ##########################
