--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,4 @@ logging.file=${catalina.base}/logs/csye6225.log
 ##spring.jpa.hibernate.ddl-auto=update
 ##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 # Naming strategy
-spring.profiles.active: dev
+spring.profiles.active: test
