--- a/build.gradle
+++ b/build.gradle
@@ -56,13 +56,7 @@ dependencies {
     compile('com.google.guava:guava:+')
     compile('org.apache.httpcomponents:httpclient:+')
     compile('com.google.code.gson:gson:+')
-//    compile('org.hibernate:hibernate-core:5.2.11.Final')
-//    compile('org.hibernate:hibernate-entitymanager:4.3.8.Final')
-    compile('javax.servlet:jstl:1.2')
-    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
-    compile('net.sourceforge.nekohtml:nekohtml:1.9.21')
-    compile('org.webjars:bootstrap:3.2.0')
-    compile('org.webjars:jquery:2.1.3')
+    compile('commons-fileupload:commons-fileupload:1.3.2')
     //compile ('com.amazonaws:aws-java-sdk:+')
     //compile ('com.google.cloud:google-cloud:+')
 
