--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,29 @@
-# Created by .ignore support plugin (hsz.mobi)
-### Example user template template
-### Example user template
+.gradle
+/build/
 
-# IntelliJ project files
-# .idea
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+
+### IntelliJ IDEA ###
+.idea
+*.iws
 *.iml
-# out
-gen
-.gitignore
-.idea/inspectionProfiles/
-# build/reports/
-# build/tmp/compileJava/
-# build/tmp/compileTestJava/
-# com.csye6255.demo/
-# java/
-# out/test/classes/com/csye6225/demo/rest_assured/Demo.class
-# src/test/resources/
+*.ipr
+/out/
+.idea/
+build/**/*
+.gradle/**/*
+/out/
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
