Updated Cloudformation stack

--- a/infrastructure/cloudformation/create-ec2-stack.yml
+++ b/infrastructure/cloudformation/create-ec2-stack.yml
@@ -78,6 +78,9 @@ Parameters:
   SubnetId2:
     Description: Subnet Id for us-east-1b
     Type: "String"
+  #BucketName:
+  #  Description: Name of the S3 bucket
+  #  Type: "String"
   DynamodbTableName:
     Description: Name of the Dynamodb
     Type: "String"
