Application properties updated for test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-0
-0spring.main.banner-mode=off
+spring.main.banner-mode=off
 management.security.enabled=false
 security.basic.enabled=false
 security.user.name=admin
@@ -12,6 +11,6 @@ logging.file=${catalina.base}/logs/csye6225.log
 spring.http.multipart.max-file-size=10MB
 spring.http.multipart.max-request-size=10MB
 # Naming strategy
-#spring.profiles.active: test
-spring.profiles.active:dev
+spring.profiles.active: test
+#spring.profiles.active:dev
 
