--- a/.travis.yml
+++ b/.travis.yml
@@ -28,9 +28,9 @@ script:
 
 after_success:
   - mkdir codedeploy
-  - zip -r WebApp-${TRAVIS_JOB_NUMER}.zip build/libs/ROOT.war appsec.yml
+  - zip -r WebApp.zip build/libs/ROOT.war appsec.yml
   - ls -al
-  - mv WebApp-${TRAVIS_JOB_NUMER}.zip codedeploy/
+  - mv WebApp.zip codedeploy/
   - ls -al
   - pwd
   - cd codedeploy
