--- a/infrastructure/aws/cloudformation/create-ec2-stack.yml
+++ b/infrastructure/aws/cloudformation/create-ec2-stack.yml
@@ -7,6 +7,9 @@ AWSTemplateFormatVersion: 2010-09-09
 Description: CloudFormation Template to create an EC2 instance
 
 Parameters:
+  KeyName:
+    Description: Key pair name
+    Type: "String"
   InstanceType:
     Description: Instance type to use
     Type: "String"
@@ -78,9 +81,6 @@ Parameters:
   SubnetId2:
     Description: Subnet Id for us-east-1b
     Type: "String"
-  #BucketName:
-  #  Description: Name of the S3 bucket
-  #  Type: "String"
   DynamodbTableName:
     Description: Name of the Dynamodb
     Type: "String"
@@ -117,8 +117,123 @@ Parameters:
   DBIngressPort:
     Description: MySQL db Ingress port for RDS Instance
     Type: "String"
+  Ec2RoleName:
+    Description: EC2 role name
+    Type: "String"
+  CodeDepolyRoleName:
+    Description: Code Deploy name
+    Type: "String"
+  PolicyDeployEC2S3Name:
+    Description: Code Deploy from EC2 S3
+    Type: "String"
+  PolicyTravisUploadS3Name:
+    Description: Travis Upload to S3
+    Type: "String"
+  PolicyTravisCodeDeployName:
+    Description: Travis-Code-Deploy-new
+    Type: "String"
 
 Resources:
+  Ec2Role:
+    Type: "AWS::IAM::Role"
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          -
+            Effect: "Allow"
+            Principal:
+              Service:
+                - "ec2.amazonaws.com"
+            Action:
+              - "sts:AssumeRole"
+      Path: "/"
+      RoleName: !Ref Ec2RoleName
+  Ec2InstanceProfile:
+    Type: "AWS::IAM::InstanceProfile"
+    Properties:
+      Path: "/"
+      Roles:
+        -
+          Ref: "Ec2Role"
+
+  CodeDeployRole:
+    Type: "AWS::IAM::Role"
+    Properties:
+      ManagedPolicyArns:
+        - "arn:aws:iam::aws:policy/service-role/AWSCodeDeployRole"
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          -
+            Effect: "Allow"
+            Principal:
+              Service:
+                - "codedeploy.amazonaws.com"
+            Action:
+              - "sts:AssumeRole"
+      RoleName: !Ref CodeDepolyRoleName
+
+  RolePolicy1:
+    Type: "AWS::IAM::ManagedPolicy"
+    Properties:
+      Description: "Trying to create a CF policy"
+      ManagedPolicyName: !Ref PolicyDeployEC2S3Name #"CodeDeploy-EC2-S3new"
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          -
+            Effect: "Allow"
+            Action:
+              - "s3:Get*"
+              - "s3:List*"
+            Resource: "*"
+      Roles:
+        -
+          Ref:  "Ec2Role"
+
+  RolePolicy2:
+    Type: "AWS::IAM::ManagedPolicy"
+    Properties:
+      Description: "Trying to create a CF policy"
+      ManagedPolicyName: !Ref PolicyTravisUploadS3Name #"Travis-Upload-S3-new"
+      PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              -
+                Effect: "Allow"
+                Action:
+                  - "s3:PutObject"
+                Resource: "*"
+
+  RolePolicy3:
+    Type: "AWS::IAM::ManagedPolicy"
+    Properties:
+      Description: "Trying to create a CF policy"
+      ManagedPolicyName: !Ref PolicyTravisCodeDeployName #"Travis-Code-Deploy-new"
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          -
+            Effect: "Allow"
+            Action:
+              - "codedeploy:RegisterApplicationRevision"
+              - "codedeploy:GetApplicationRevision"
+            Resource: "arn:aws:codedeploy:us-east-1:291255850115:application:WebApplication"
+          -
+            Effect: "Allow"
+            Action:
+              - "codedeploy:CreateDeployment"
+              - "codedeploy:GetDeployment"
+            Resource: "*"
+          -
+            Effect: "Allow"
+            Action: "codedeploy:GetDeploymentConfig"
+            Resource:
+              - "arn:aws:codedeploy:us-east-1:291255850115:deploymentconfig:CodeDeployDefault.OneAtATime"
+              - "arn:aws:codedeploy:us-east-1:291255850115:deploymentconfig:CodeDeployDefault.HalfAtATime"
+              - "arn:aws:codedeploy:us-east-1:291255850115:deploymentconfig:CodeDeployDefault.AllAtOnce"
+
 # VPC Security Group for EC2 instance
   WebServerSecurityGroup:
     Type: 'AWS::EC2::SecurityGroup'
@@ -143,7 +258,23 @@ Resources:
           CidrIp: 0.0.0.0/0
   EC2Instance:
     Type: 'AWS::EC2::Instance'
+    Metadata:
+      'AWS::CloudFormation::Init':
+        services:
+          sysvint:
+            codedeploy-agent:
+              enabled: true
+              ensureRunning: true
+        configSets:
+          default:
+            - install_base
+        install_base:
+          packages:
+            apt-get:
+              wget: []
     Properties:
+      KeyName: !Ref KeyName
+      IamInstanceProfile: !Ref Ec2InstanceProfile
       ImageId:
         Ref: Id
       InstanceType:
@@ -155,6 +286,10 @@ Resources:
           - GroupId
       SubnetId:
         Ref: SubnetId
+      Tags:
+        -
+          Key: "name"
+          Value: "csye6255"
       BlockDeviceMappings:
         -
           DeviceName:
@@ -164,6 +299,77 @@ Resources:
               Ref: VolumeType
             VolumeSize:
               Ref: VolumeSize
+      UserData:
+        Fn::Base64: !Sub |
+            #! /bin/bash -xe
+            apt-get update
+            echo Y | apt-get install default-jre
+            echo Y | apt-get install default-jdk
+
+            sed -i '$ a JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64"' /etc/environment
+            source /etc/environment
+            wait
+            sleep 3
+            groupadd tomcat
+            useradd -s /bin/false -g tomcat -d /opt/tomcat tomcat
+
+            cd /opt
+            curl -O http://apache.mirrors.tds.net/tomcat/tomcat-8/v8.5.23/bin/apache-tomcat-8.5.23.tar.gz
+            tar -xvf apache-tomcat-8.5.23.tar.gz
+            mv apache-tomcat-8.5.23 tomcat
+
+            sleep 3
+
+            chgrp -R tomcat /opt/tomcat
+            chown -R tomcat /opt/tomcat
+            chmod -R 755 /opt/tomcat
+
+            echo "[Unit]
+            Description=Apache Tomcat Web Server
+            After=network.target
+
+            [Service]
+            Type=forking
+
+            Environment=CATALINA_PID=/opt/tomcat/temp/tomcat.pid
+            Environment=CATALINA_HOME=/opt/tomcat
+            Environment=CATALINA_BASE=/opt/tomcat
+            Environment='JAVA_OPTS=-Djava.awt.headless=true -Djava.security.egd=file:/dev/./urandom'
+
+            ExecStart=/opt/tomcat/bin/startup.sh
+            ExecStop=/opt/tomcat/bin/shutdown.sh
+
+            User=tomcat
+            Group=tomcat
+            UMask=0007
+            RestartSec=15
+            Restart=always
+
+            [Install]
+            WantedBy=multi-user.target" > /etc/systemd/system/tomcat.service
+
+            systemctl daemon-reload
+            sleep 2
+            systemctl start tomcat
+            sleep 2
+            systemctl enable tomcat
+            sudo ufw allow 8080
+
+            sleep 10
+            wait
+
+            apt-get update
+            echo Y | apt-get install ruby
+            apt-get install wget
+            cd /home/ubuntu
+            wget https://aws-codedeploy-us-east-2.s3.amazonaws.com/latest/install
+            chmod -R 777 /home/ubuntu/install
+            wait
+            sleep 3
+            ./install auto
+            service codedeploy-agent start
+            sleep 10
+
 # VPC Security Group for RDS instance
   RDSSecurityGroup:
     Type: 'AWS::EC2::SecurityGroup'
