--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,12 @@ dependencies {
     compile('org.apache.httpcomponents:httpclient:+')
     compile('com.google.code.gson:gson:+')
     compile('commons-fileupload:commons-fileupload:1.3.2')
-    //compile ('com.amazonaws:aws-java-sdk:+')
+    compile ('com.amazonaws:aws-java-sdk:+')
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-aws-autoconfigure
+    compile('org.springframework.cloud:spring-cloud-aws-autoconfigure:1.0.0.RELEASE')
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-aws-jdbc', version: '1.0.0.RELEASE'
+
+
     //compile ('com.google.cloud:google-cloud:+')
 
     runtime('org.springframework.boot:spring-boot-devtools')
