--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,6 @@ logging.file=${catalina.base}/logs/csye6225.log
 spring.http.multipart.max-file-size=10MB
 spring.http.multipart.max-request-size=10MB
 # Naming strategy
-#spring.profiles.active: test
+spring.profiles.active: test
 #spring.profiles.active:dev
-spring.profiles.active:aws
 
