--- a/infrastructure/aws/cloudformation/create-ec2-stack.yml
+++ b/infrastructure/aws/cloudformation/create-ec2-stack.yml
@@ -219,7 +219,7 @@ Resources:
             Action:
               - "codedeploy:RegisterApplicationRevision"
               - "codedeploy:GetApplicationRevision"
-            Resource: "arn:aws:codedeploy:us-east-1:291255850115:application:WebApplication"
+            Resource: "arn:aws:codedeploy:us-east-1:752801368307:application:Csye6225"
           -
             Effect: "Allow"
             Action:
@@ -230,9 +230,9 @@ Resources:
             Effect: "Allow"
             Action: "codedeploy:GetDeploymentConfig"
             Resource:
-              - "arn:aws:codedeploy:us-east-1:291255850115:deploymentconfig:CodeDeployDefault.OneAtATime"
-              - "arn:aws:codedeploy:us-east-1:291255850115:deploymentconfig:CodeDeployDefault.HalfAtATime"
-              - "arn:aws:codedeploy:us-east-1:291255850115:deploymentconfig:CodeDeployDefault.AllAtOnce"
+              - "arn:aws:codedeploy:us-east-1:752801368307:deploymentconfig:CodeDeployDefault.OneAtATime"
+              - "arn:aws:codedeploy:us-east-1:752801368307:deploymentconfig:CodeDeployDefault.HalfAtATime"
+              - "arn:aws:codedeploy:us-east-1:752801368307:deploymentconfig:CodeDeployDefault.AllAtOnce"
 
 # VPC Security Group for EC2 instance
   WebServerSecurityGroup:
@@ -288,7 +288,7 @@ Resources:
         Ref: SubnetId
       Tags:
         -
-          Key: "name"
+          Key: "course"
           Value: "csye6255"
       BlockDeviceMappings:
         -
