--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -5,10 +5,10 @@ spring.datasource.username=csye6225master
 spring.datasource.password=csye6225password
 
 
-#jsa.aws.access_key_id=AKIAIX6QLOIPWLR6NSCA
-#jsa.aws.secret_access_key=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
-#jsa.s3.bucket=code-deploy.csye6225-fall2017-guptarite.me
-#jsa.s3.region=us-east-1
+jsa.aws.access_key_id=AKIAIX6QLOIPWLR6NSCA
+jsa.aws.secret_access_key=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
+jsa.s3.bucket=code-deploy.csye6225-fall2017-guptarite.me
+jsa.s3.region=us-east-1
 
 ##jsa.s3.uploadfile=/home/ritesh/U.txt
 ##jsa.s3.key=jsa-s3-upload-file.txt
