--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ security.user.name=admin
 security.user.password=admin
 spring.session.store-type=none
 catalina.base=/home/travis/
-logging.file=${catalina.base}/logs/csye6225.log
+#logging.file=${catalina.base}/logs/csye6225.log
 #http://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#common-application-properties
 #search multipart
 spring.http.multipart.max-file-size=10MB
