--- a/appsec.yml
+++ b/appsec.yml
@@ -4,10 +4,10 @@ os: linux
 files:
   - source: ./appspec.yml
     destination: /home/ubuntu
-  - source: ./restartTomcat.sh
+  - source: /home/ritesh/Downloads/apache-tomcat-8.5.20/bin/startup.sh
     destination: /home/ubuntu
   - source: ./build/libs/ROOT.war
-    destination: /var/lib/tomcat8/webapps
+    destination: /opt/tomcat/webapps
 
 hooks:
   AfterInstall:
