--- a/infrastructure/aws/cloudformation/create-ec2-stack.yml
+++ b/infrastructure/aws/cloudformation/create-ec2-stack.yml
@@ -21,9 +21,6 @@ Parameters:
   Id:
     Description: Image id of the AMI
     Type: AWS::EC2::Image::Id
-  SubnetId:
-    Description: Subnet id of the AMI
-    Type: "String"
   VpcId:
     Description: Vpc id of the AMI
     Type: "String"
@@ -117,123 +114,23 @@ Parameters:
   DBIngressPort:
     Description: MySQL db Ingress port for RDS Instance
     Type: "String"
-  Ec2RoleName:
-    Description: EC2 role name
+  RoleStack:
+    Description: Name of the active stack that has roles created
     Type: "String"
-  CodeDepolyRoleName:
-    Description: Code Deploy name
+  EC2TagName:
+    Description: Name of the active stack that has roles created
     Type: "String"
-  PolicyDeployEC2S3Name:
-    Description: Code Deploy from EC2 S3
+  EC2TagValue:
+    Description: Name of the active stack that has roles created
     Type: "String"
-  PolicyTravisUploadS3Name:
-    Description: Travis Upload to S3
+  DNSRecordType:
+    Description: Name of the active stack that has roles created
     Type: "String"
-  PolicyTravisCodeDeployName:
-    Description: Travis-Code-Deploy-new
+  DNSTtl:
+    Description: Name of the active stack that has roles created
     Type: "String"
 
 Resources:
-  Ec2Role:
-    Type: "AWS::IAM::Role"
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          -
-            Effect: "Allow"
-            Principal:
-              Service:
-                - "ec2.amazonaws.com"
-            Action:
-              - "sts:AssumeRole"
-      Path: "/"
-      RoleName: !Ref Ec2RoleName
-  Ec2InstanceProfile:
-    Type: "AWS::IAM::InstanceProfile"
-    Properties:
-      Path: "/"
-      Roles:
-        -
-          Ref: "Ec2Role"
-
-  CodeDeployRole:
-    Type: "AWS::IAM::Role"
-    Properties:
-      ManagedPolicyArns:
-        - "arn:aws:iam::aws:policy/service-role/AWSCodeDeployRole"
-      AssumeRolePolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          -
-            Effect: "Allow"
-            Principal:
-              Service:
-                - "codedeploy.amazonaws.com"
-            Action:
-              - "sts:AssumeRole"
-      RoleName: !Ref CodeDepolyRoleName
-
-  RolePolicy1:
-    Type: "AWS::IAM::ManagedPolicy"
-    Properties:
-      Description: "Trying to create a CF policy"
-      ManagedPolicyName: !Ref PolicyDeployEC2S3Name #"CodeDeploy-EC2-S3new"
-      PolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          -
-            Effect: "Allow"
-            Action:
-              - "s3:Get*"
-              - "s3:List*"
-            Resource: "*"
-      Roles:
-        -
-          Ref:  "Ec2Role"
-
-  RolePolicy2:
-    Type: "AWS::IAM::ManagedPolicy"
-    Properties:
-      Description: "Trying to create a CF policy"
-      ManagedPolicyName: !Ref PolicyTravisUploadS3Name #"Travis-Upload-S3-new"
-      PolicyDocument:
-            Version: "2012-10-17"
-            Statement:
-              -
-                Effect: "Allow"
-                Action:
-                  - "s3:PutObject"
-                Resource: "*"
-
-  RolePolicy3:
-    Type: "AWS::IAM::ManagedPolicy"
-    Properties:
-      Description: "Trying to create a CF policy"
-      ManagedPolicyName: !Ref PolicyTravisCodeDeployName #"Travis-Code-Deploy-new"
-      PolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          -
-            Effect: "Allow"
-            Action:
-              - "codedeploy:RegisterApplicationRevision"
-              - "codedeploy:GetApplicationRevision"
-            Resource: "arn:aws:codedeploy:us-east-1:291255850115:application:WebApplication"
-          -
-            Effect: "Allow"
-            Action:
-              - "codedeploy:CreateDeployment"
-              - "codedeploy:GetDeployment"
-            Resource: "*"
-          -
-            Effect: "Allow"
-            Action: "codedeploy:GetDeploymentConfig"
-            Resource:
-              - "arn:aws:codedeploy:us-east-1:291255850115:deploymentconfig:CodeDeployDefault.OneAtATime"
-              - "arn:aws:codedeploy:us-east-1:291255850115:deploymentconfig:CodeDeployDefault.HalfAtATime"
-              - "arn:aws:codedeploy:us-east-1:291255850115:deploymentconfig:CodeDeployDefault.AllAtOnce"
-
 # VPC Security Group for EC2 instance
   WebServerSecurityGroup:
     Type: 'AWS::EC2::SecurityGroup'
@@ -256,25 +153,61 @@ Resources:
           FromPort: '443'
           ToPort: '443'
           CidrIp: 0.0.0.0/0
+
+# VPC Security Group for RDS instance
+  RDSSecurityGroup:
+    Type: 'AWS::EC2::SecurityGroup'
+    Properties:
+      GroupName: !Ref DBSecurityGroup
+      VpcId: !Ref VpcId
+      GroupDescription: Base Security Group
+# Ingress rule for RDS instance
+  RDSIngressSecurity:
+    Type: 'AWS::EC2::SecurityGroupIngress'
+    Properties:
+      IpProtocol: tcp
+      FromPort: !Ref DBIngressPort
+      ToPort: !Ref DBIngressPort
+      SourceSecurityGroupId: !Ref WebServerSecurityGroup
+      GroupId: !Ref RDSSecurityGroup
+# Subnet group for RDS instance
+  DBSubnetGroup:
+    Type: "AWS::RDS::DBSubnetGroup"
+    Properties:
+      DBSubnetGroupDescription: "New subnet for RDS instance"
+      SubnetIds:
+        - !Ref SubnetId1
+        - !Ref SubnetId2
+# RDS instance
+  RDSInstance:
+    Type: "AWS::RDS::DBInstance"
+    Properties:
+      DBName: !Ref DBName
+      AllocatedStorage: !Ref DBAllocatedStorage
+      DBInstanceClass: !Ref DBInstanceClass
+      Engine: !Ref DatabaseType
+      EngineVersion: !Ref DatabaseVersion
+      StorageType: !Ref DBStorageType
+      DBSubnetGroupName: !Ref DBSubnetGroup
+      DBInstanceIdentifier: !Ref InstanceIdentifier
+      MasterUsername: !Ref DBUser
+      MasterUserPassword: !Ref DBPassword
+      PubliclyAccessible: false
+      MultiAZ: false
+      VPCSecurityGroups:
+      - Ref: RDSSecurityGroup
+      Tags:
+        -
+          Key: "Name"
+          Value: "RDS MySQL Database"
+
   EC2Instance:
     Type: 'AWS::EC2::Instance'
-    Metadata:
-      'AWS::CloudFormation::Init':
-        services:
-          sysvint:
-            codedeploy-agent:
-              enabled: true
-              ensureRunning: true
-        configSets:
-          default:
-            - install_base
-        install_base:
-          packages:
-            apt-get:
-              wget: []
     Properties:
       KeyName: !Ref KeyName
-      IamInstanceProfile: !Ref Ec2InstanceProfile
+      IamInstanceProfile:
+        Fn::ImportValue:
+          !Sub "${RoleStack}-Ec2InstanceRole"
       ImageId:
         Ref: Id
       InstanceType:
@@ -285,11 +218,11 @@ Resources:
           - WebServerSecurityGroup
           - GroupId
       SubnetId:
-        Ref: SubnetId
+        Ref: SubnetId1
       Tags:
         -
-          Key: "name"
-          Value: "csye6255"
+          Key: !Ref EC2TagName
+          Value: !Ref EC2TagValue #"csye6255"
       BlockDeviceMappings:
         -
           DeviceName:
@@ -370,52 +303,17 @@ Resources:
             service codedeploy-agent start
             sleep 10
 
-# VPC Security Group for RDS instance
-  RDSSecurityGroup:
-    Type: 'AWS::EC2::SecurityGroup'
-    Properties:
-      GroupName: !Ref DBSecurityGroup
-      VpcId: !Ref VpcId
-      GroupDescription: Base Security Group
-# Ingress rule for RDS instance
-  RDSIngressSecurity:
-    Type: 'AWS::EC2::SecurityGroupIngress'
-    Properties:
-      IpProtocol: tcp
-      FromPort: !Ref DBIngressPort
-      ToPort: !Ref DBIngressPort
-      SourceSecurityGroupId: !Ref WebServerSecurityGroup
-      GroupId: !Ref RDSSecurityGroup
-# Subnet group for RDS instance
-  DBSubnetGroup:
-    Type: "AWS::RDS::DBSubnetGroup"
-    Properties:
-      DBSubnetGroupDescription: "New subnet for RDS instance"
-      SubnetIds:
-        - !Ref SubnetId1
-        - !Ref SubnetId2
-# RDS instance
-  RDSInstance:
-    Type: "AWS::RDS::DBInstance"
-    Properties:
-      DBName: !Ref DBName
-      AllocatedStorage: !Ref DBAllocatedStorage
-      DBInstanceClass: !Ref DBInstanceClass
-      Engine: !Ref DatabaseType
-      EngineVersion: !Ref DatabaseVersion
-      StorageType: !Ref DBStorageType
-      DBSubnetGroupName: !Ref DBSubnetGroup
-      DBInstanceIdentifier: !Ref InstanceIdentifier
-      MasterUsername: !Ref DBUser
-      MasterUserPassword: !Ref DBPassword
-      PubliclyAccessible: false
-      MultiAZ: false
-      VPCSecurityGroups:
-      - Ref: RDSSecurityGroup
-      Tags:
-        -
-          Key: "Name"
-          Value: "RDS MySQL Database"
+            echo "
+            JAVA_OPTS=$JAVA_OPTS-Dspring.datasource.url=jdbc:mysql:${RDSInstance.Endpoint.Address}//:3306/csye6225-fall2017
+            JAVA_OPTS=$JAVA_OPTS-Dspring.datasource.username='${DBUser}'
+            JAVA_OPTS=$JAVA_OPTS-Dspring.datasource.password='${DBPassword}'" >> /opt/tomcat/bin/setenv.sh
+
+            sleep 3
+            chmod -R 755 /opt/tomcat/bin/setenv.sh
+            chown tomcat:tomcat /opt/tomcat/bin/setenv.sh
+            source /opt/tomcat/bin/setenv.sh
+            sleep 3
+
 # S3 bucket
   S3Bucket:
     Type: AWS::S3::Bucket
@@ -447,8 +345,8 @@ Resources:
         Ref: HostedZoneId
       Name:
         Ref: DomainName
-      Type: A
-      TTL: 60
+      Type: !Ref DNSRecordType #A
+      TTL: !Ref DNSTtl #60
       ResourceRecords:
       - !GetAtt EC2Instance.PublicIp
 
