--- a/infrastructure/aws/cloudformation/create-ec2-stack.yml
+++ b/infrastructure/aws/cloudformation/create-ec2-stack.yml
@@ -304,7 +304,7 @@ Resources:
             sleep 10
 
             echo "
-            JAVA_OPTS=$JAVA_OPTS-Dspring.datasource.url=jdbc:mysql:${RDSInstance.Endpoint.Address}:3306/csye6225
+            JAVA_OPTS=$JAVA_OPTS-Dspring.datasource.url=jdbc:mysql://${RDSInstance.Endpoint.Address}:3306/csye6225
             JAVA_OPTS=$JAVA_OPTS-Dspring.datasource.username=${DBUser}
             JAVA_OPTS=$JAVA_OPTS-Dspring.datasource.password=${DBPassword}" >> /opt/tomcat/bin/setenv.sh
 
