--- a/infrastructure/aws/cloudformation/create-ec2-stack.yml
+++ b/infrastructure/aws/cloudformation/create-ec2-stack.yml
@@ -188,6 +188,7 @@ Resources:
       Engine: !Ref DatabaseType
       EngineVersion: !Ref DatabaseVersion
       StorageType: !Ref DBStorageType
+      PubliclyAccessible: true
       DBSubnetGroupName: !Ref DBSubnetGroup
       DBInstanceIdentifier: !Ref InstanceIdentifier
       MasterUsername: !Ref DBUser
@@ -304,9 +305,9 @@ Resources:
             sleep 10
 
             echo "
-            JAVA_OPTS=$JAVA_OPTS-Dspring.datasource.url=jdbc:mysql:${RDSInstance.Endpoint.Address}//:3306/csye6225
-            JAVA_OPTS=$JAVA_OPTS-Dspring.datasource.username=${DBUser}
-            JAVA_OPTS=$JAVA_OPTS-Dspring.datasource.password=${DBPassword}" >> /opt/tomcat/bin/setenv.sh
+            JAVA_OPTS="$JAVA_OPTS-Dspring.datasource.url=jdbc:mysql://${RDSInstance.Endpoint.Address}:3306/csye6225"
+            JAVA_OPTS="$JAVA_OPTS-Dspring.datasource.username=${DBUser}"
+            JAVA_OPTS="$JAVA_OPTS-Dspring.datasource.password=${DBPassword}"" >> /opt/tomcat/bin/setenv.sh
 
             sleep 3
             chmod -R 755 /opt/tomcat/bin/setenv.sh
