application properties changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-mjgtik;ospring.main.banner-mode=off
+spring.main.banner-mode=off
 management.security.enabled=false
 security.basic.enabled=false
 security.user.name=admin
