--- a/infrastructure/aws/cloudformation/create-ec2-stack.yml
+++ b/infrastructure/aws/cloudformation/create-ec2-stack.yml
@@ -235,6 +235,7 @@ Resources:
       UserData:
         Fn::Base64: !Sub |
             #! /bin/bash -xe
+            export DEBIAN_FRONTEND=noninteractive
             apt-get update
             echo Y | apt-get install default-jre
             echo Y | apt-get install default-jdk
