--- a/infrastructure/aws/cloudformation/IAM-roles-policies-profile.yml
+++ b/infrastructure/aws/cloudformation/IAM-roles-policies-profile.yml
@@ -45,17 +45,23 @@ Resources:
               - "sts:AssumeRole"
       Path: "/"
       RoleName: !Ref Ec2RoleName
-      Policies:
+
+  CodeDepolyEc2S3Policies:
+    Type: "AWS::IAM::ManagedPolicy"
+    Properties:
+      ManagedPolicyName: !Ref PolicyDeployEC2S3Name
+      PolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Action:
+              - 's3:Get*'
+              - 's3:List*'
+            Effect: Allow
+            Resource: '*'
+      Roles:
         -
-          PolicyName: !Ref PolicyDeployEC2S3Name
-          PolicyDocument:
-            Version: 2012-10-17
-            Statement:
-              - Action:
-                  - 's3:Get*'
-                  - 's3:List*'
-                Effect: Allow
-                Resource: '*'
+          Ref: "Ec2Role"
+
   Ec2InstanceProfile:
     Type: "AWS::IAM::InstanceProfile"
     Properties:
@@ -95,7 +101,7 @@ Resources:
             Resource:
               - '*'
       Users:
-        - Travis
+        - travis_ci
 
   travisCiPolicy1:
     Type: "AWS::IAM::ManagedPolicy"
@@ -125,7 +131,7 @@ Resources:
               - !Sub 'arn:aws:codedeploy:${AWS::Region}:${AWS::AccountId}:deploymentconfig:CodeDeployDefault.HalfAtATime'
               - !Sub 'arn:aws:codedeploy:${AWS::Region}:${AWS::AccountId}:deploymentconfig:CodeDeployDefault.AllAtOnce'
       Users:
-        - Travis
+        - travis_ci
 
 
 Outputs:
