--- a/appspec.yml
+++ b/appspec.yml
@@ -7,7 +7,7 @@ files:
   - source: ./restartTomcat.sh
     destination: /home/ubuntu
   - source: ./build/libs/ROOT.war
-    destination: /opt/tomcat/webapps
+    destination: /var/lib/tomcat8/webapps
 
 hooks:
   AfterInstall:
