--- a/infrastructure/aws/cloudformation/create-ec2-stack.yml
+++ b/infrastructure/aws/cloudformation/create-ec2-stack.yml
@@ -187,12 +187,12 @@ Resources:
       DBInstanceClass: !Ref DBInstanceClass
       Engine: !Ref DatabaseType
       EngineVersion: !Ref DatabaseVersion
+      PubliclyAccessible: true
       StorageType: !Ref DBStorageType
       DBSubnetGroupName: !Ref DBSubnetGroup
       DBInstanceIdentifier: !Ref InstanceIdentifier
       MasterUsername: !Ref DBUser
       MasterUserPassword: !Ref DBPassword
-      PubliclyAccessible: false
       MultiAZ: false
       VPCSecurityGroups:
       - Ref: RDSSecurityGroup
@@ -307,6 +307,7 @@ Resources:
             echo 'JAVA_OPTS="$JAVA_OPTS-Dspring.datasource.url=jdbc:mysql://${RDSInstance.Endpoint.Address}:3306/csye6225"' >> /opt/tomcat/bin/setenv.sh
             echo 'JAVA_OPTS="$JAVA_OPTS-Dspring.datasource.username=${DBUser}"' >> /opt/tomcat/bin/setenv.sh
             echo 'JAVA_OPTS="$JAVA_OPTS-Dspring.datasource.password=${DBPassword}"' >> /opt/tomcat/bin/setenv.sh
+
 
             sleep 3
             chmod -R 755 /opt/tomcat/bin/setenv.sh
