--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -8,7 +8,7 @@
 jsa.aws.access_key_id=AKIAJF32P2PDBB47WTHA
 jsa.aws.secret_access_key=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
 #jsa.s3.bucket=ec2.csye6225-fall2017-guptarite.me.csye6225.com
-#jsa.s3.region=us-east-1
+jsa.s3.region=us-east-1
 
 ##jsa.s3.uploadfile=/home/ritesh/U.txt
 ##jsa.s3.key=jsa-s3-upload-file.txt
