--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -1,8 +1,8 @@
 ################## DataSource Configuration ##########################
--Dspring.datasource.driverClassName=com.mysql.jdbc.Driver
--Dspring.datasource.url=jdbc:mysql://localhost:3306/csye6225
--Dspring.datasource.username=root
--Dspring.datasource.password=password
+$JAVA_OPTS-Dspring.datasource.driverClassName=com.mysql.jdbc.Driver
+$JAVA_OPTS-Dspring.datasource.url=jdbc:mysql://localhost:3306/csye6225
+$JAVA_OPTS-Dspring.datasource.username=root
+$JAVA_OPTS-Dspring.datasource.password=password
 
 
 cloud.aws.stack.auto=false
