--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.http.multipart.max-request-size=10MB
 # Naming strategy
 #spring.profiles.active: test
 #spring.profiles.active:dev
-spring.profiles.active:aws
+#spring.profiles.active:aws
 
