--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -7,10 +7,10 @@ cloud.aws.stack.auto=false
 #spring.datasource.name=access_key
 #spring.datasource.passworddummypassword
 
-jsa.aws.access_key_id=dummy
-jsa.aws.secret_access_key=dumb
+spring.datasource.access_key_id=dumb
+spring.datasource.secret_access_key=dumb
 #jsa.s3.bucket=ec2.csye6225-fall2017-guptarite.me.csye6225.com
-jsa.aws.region=us-east-1
+spring.datasource.region=us-east-1
 
 #jsa.s3.uploadfile=/home/ritesh/U.txt
 ##jsa.s3.key=jsa-s3-upload-file.txt
