--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -10,7 +10,7 @@ cloud.aws.stack.auto=false
 spring.datasource.access_key_id=dumb
 spring.datasource.secret_access_key=dumb
 #jsa.s3.bucket=ec2.csye6225-fall2017-guptarite.me.csye6225.com
-spring.datasource.region=us-east-1
+spring.datasource.region=alele
 
 #jsa.s3.uploadfile=/home/ritesh/U.txt
 ##jsa.s3.key=jsa-s3-upload-file.txt
