--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.http.multipart.max-request-size=10MB
 #spring.profiles.active:dev
 #spring.profiles.active:aws
 
+aws.AWS_ACCESS_KEY_ID=dumb
+aws.AWS_SECRET_ACCESS_KEY=dumb
