--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -17,5 +17,5 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 # Hibernate
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.AWS_ACCESS_KEY_ID=dumb
-spring.datasource.AWS_SECRET_ACCESS_KEY=dumb
+aws.AWS_ACCESS_KEY_ID=dumb
+aws.AWS_SECRET_ACCESS_KEY=dumb
