--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -8,6 +8,8 @@ cloud.aws.stack.auto=false
 #spring.datasource.passworddummypassword
 aws.AWS_ACCESS_KEY_ID=dumb
 aws.AWS_SECRET_ACCESS_KEY=dumb
+aws.S3_BUCKET_NAME=abc
+aws.AWS_REGION=abc
 #jsa.s3.bucket=ec2.csye6225-fall2017-guptarite.me.csye6225.com
 #spring.datasource.region=alele
 
