--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -19,3 +19,5 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
 aws.AWS_ACCESS_KEY_ID=dumb
 aws.AWS_SECRET_ACCESS_KEY=dumb
+aws.S3_BUCKET_NAME=abc
+aws.AWS_REGION=abc
