--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.http.multipart.max-request-size=10MB
 
 aws.AWS_ACCESS_KEY_ID=dumb
 aws.AWS_SECRET_ACCESS_KEY=dumb
+aws.S3_BUCKET_NAME=abc.com
+aws.AWS_REGION=abc
